--- a/index.html
+++ b/index.html
@@ -4,19 +4,15 @@
   <title>Demo</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" href="app.css">
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <script type="text/javascript" src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js'></script>
   <script type="text/javascript" src="app.js"></script>
 </head>
 <body class="container">
   <div ng-controller="ImageController as imageList" class="row">
-    <div class="col-xs-1" ng-repeat="owner in imageList.images">
-      <img class="img-responsive" ng-src="{{owner.avatar_url}}" />
-      <ul class="list-group" ng-class="{visible: hover}" ng-mouseenter="hover = true" ng-mouseleave="hover = false" ng-if="aName(owner)">
-        <li class="list-group-item" ng-repeat="follower in owner.followers">
-          {{follower.login}}
-        </li>
-      </ul>
+    <div class="col-md-1 col-sm-3 col-xs-2" ng-repeat="owner in imageList.images">
+      <img class="img-responsive" ng-src="{{owner.avatar_url}}" hoverable can-hover="aName(owner)" owner="owner" />
     </div>
   </div>
 </body>
